src/css/Post.module.css
.postContainer {
  max-width: 780px;
  margin-inline: auto;

  display: flex;
  flex-direction: column-reverse;
  gap: 40px;
}

.singlePost > *:first-child {
  margin-top: 0;
}

.singlePost > * {
  width: auto;
}

.singlePost h1,
.singlePost h2,
.singlePost h3,
.singlePost h4,
.singlePost h5,
.singlePost h6 {
  font-weight: 400;
}

.singlePost h1 {
  margin-bottom: 32px;
  line-height: 1.1;
}

.singlePost h2,
.singlePost h3,
.singlePost h4 {
  scroll-margin-top: 40px;
  padding: 4px 12px;
  border-radius: 6px;
  width: max-content;
  line-height: 1.6;
}

.singlePost h2 {
  margin-block: 60px 16px;
  font-size: 18px;
  background-color: var(--neutral-clr-800);
  color: var(--neutral-clr-100);
}

.singlePost h3 {
  margin-block: 40px 16px;
  font-size: 16px;
  border: 1px solid var(--neutral-clr-800);
  color: var(--neutral-clr-800);
}

.singlePost h4 {
  margin-block: 32px 16px;
  font-size: 14px;
  border: 1px solid #333;
  color: #333;
}

.singlePost h5 {
  margin-block: 24px 6px;
  font-size: 16px;
  font-weight: 600;
}

.singlePost h6 {
  margin-block: 20px 6px;
  font-size: 14px;
  font-weight: 600;
}

.singlePost article :first-child,
.singlePost h2 + h3,
.singlePost h3 + h4,
.singlePost h4 + h5,
.singlePost h5 + h6 {
  margin-top: 0;
}

.singlePost p {
  margin-block: 0 16px;
}

.singlePost ul {
  list-style: circle;
}

.singlePost ol {
  list-style: decimal;
}

.singlePost ul,
.singlePost ol {
  margin-block: 24px;
  list-style-position: inside;

  li:not(:last-of-type) {
    margin-bottom: 8px;
  }
}

.singlePost h1 + figure img,
.singlePost h2 + figure img,
.singlePost h3 + figure img,
.singlePost h4 + figure img,
.singlePost h5 + figure img,
.singlePost h6 + figure img {
  margin-top: 0 !important;
}

.singlePost img {
  margin-block: 40px !important;
  border-radius: 12px;
  height: auto;
}

.singlePost video {
  width: 100%;
}

.singlePost a {
  text-decoration: underline;
  word-wrap: break-word;
}

.singlePost code {
  display: inline-block;
  width: 100%;
  overflow-x: auto;
}

.singlePost pre {
  overflow-x: auto;
}

